[tool.poetry]
name = "line-messanger-api"
version = "0.1.0"
description = ""
authors = ["Tatsuya Mizuguchi <mizuguchi_yho@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.6"
langchain = "^0.0.168"
line-bot-sdk = "^2.4.2"
flask = "^2.3.2"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
